frontend routes modification

--- a/UI/html/about.html
+++ b/UI/html/about.html
@@ -12,17 +12,17 @@
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="Yves Byiringiro" content="">
-      <link rel="icon" href="../assets/images/tablogo.png" type="image/png"/>
+      <link rel="icon" href="/assets/images/tablogo.png" type="image/png"/> <!-- Corrected Path -->
       <!-- bootstrap css -->
-      <link rel="stylesheet" href="../css/bootstrap.min.css">
+      <link rel="stylesheet" href="/css/bootstrap.min.css"> <!-- Corrected Path -->
       <!-- style css -->
-      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="/css/style.css"> <!-- Corrected Path -->
       <!-- Responsive-->
-      <link rel="stylesheet" href="../css/responsive.css">
+      <link rel="stylesheet" href="/css/responsive.css"> <!-- Corrected Path -->
       <!-- fevicon -->
-      <link rel="icon" href="../assets/images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="/assets/images/fevicon.png" type="image/gif" /> <!-- Corrected Path -->
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="../css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="/css/jquery.mCustomScrollbar.min.css"> <!-- Corrected Path -->
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
@@ -48,7 +48,7 @@
    <body class="main-layout">
       <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="../assets/images/loading.gif" alt="#"/></div>
+         <div class="loader"><img src="/assets/images/loading.gif" alt="#"/></div> <!-- Corrected Path -->
       </div>
       <!-- end loader -->
       <!-- header -->
@@ -61,7 +61,9 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="../index.html"><img src="../assets/images/logo.png" alt="#" /></a>
+                              <a href="/">
+                                 <img src="/assets/images/logo.png" alt="#" /> <!-- Corrected Path -->
+                              </a>
                            </div>
                         </div>
                      </div>
@@ -74,22 +76,22 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item ">
-                                 <a class="nav-link" href="../index.html">Home</a>
+                                 <a class="nav-link" href="/">Home</a> <!-- Changed to root path -->
                               </li>
                               <li class="nav-item active">
-                                 <a class="nav-link" href="about.html">About</a>
+                                 <a class="nav-link" href="/about">About</a> <!-- Changed to clean URL -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="apartments.html">Our Apartments</a>
+                                 <a class="nav-link" href="/apartments">Our Apartments</a> <!-- Changed to clean URL -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="gallery.html">Gallery</a>
+                                 <a class="nav-link" href="/gallery">Gallery</a> <!-- Changed to clean URL -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="testimonial.html">testimonial</a>
+                                 <a class="nav-link" href="/testimonial">testimonial</a> <!-- Changed to clean URL -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="contact.html">Contact Us</a>
+                                 <a class="nav-link" href="/contact">Contact Us</a> <!-- Changed to clean URL -->
                               </li>
                            </ul>
                         </div>
@@ -153,7 +155,7 @@
                </div>
                <div class="col-md-7">
                   <div class="about_img">
-                     <figure><img src="../assets/images/about.png" alt="#"/></figure>
+                     <figure><img src="/assets/images/about.png" alt="#"/></figure> <!-- Corrected Path -->
                   </div>
                </div>
             </div>
@@ -178,12 +180,12 @@
                   <div class="col-md-4">
                      <h3>Menu Link</h3>
                      <ul class="link_menu">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="html/about.html"> about</a></li>
-                        <li><a href="html/apartments.html">Our Apartments</a></li>
-                        <li><a href="html/gallery.html">Gallery</a></li>
-                        <li><a href="html/testimonial.html">testimonial</a></li>
-                        <li><a href="html/contact.html">Contact Us</a></li>
+                        <li class="active"><a href="/">Home</a></li> <!-- Corrected link -->
+                        <li><a href="/about">About</a></li> <!-- Corrected link -->
+                        <li><a href="/apartments">Our Apartments</a></li> <!-- Corrected link -->
+                        <li><a href="/gallery">Gallery</a></li> <!-- Corrected link -->
+                        <li><a href="/testimonial">testimonial</a></li> <!-- Corrected link -->
+                        <li><a href="/contact">Contact Us</a></li> <!-- Corrected link -->
                      </ul>
                   </div>
                   <div class="col-md-4">
@@ -213,14 +215,15 @@
       </footer>
       <!-- end footer -->
       <!-- Javascript files-->
-      <script src="../js/jquery.min.js"></script>
-      <script src="../js/bootstrap.bundle.min.js"></script>
-      <script src="../js/jquery-3.0.0.min.js"></script>
+      <script src="/js/jquery.min.js"></script> <!-- Corrected Path -->
+      <script src="/js/bootstrap.bundle.min.js"></script> <!-- Corrected Path -->
+      <script src="/js/jquery-3.0.0.min.js"></script> <!-- Corrected Path -->
       <!-- sidebar -->
-      <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="../js/custom.js"></script>
-      <script>
-         function toggleContent() {
+      <script src="/js/jquery.mCustomScrollbar.concat.min.js"></script> <!-- Corrected Path -->
+      <script src="/js/custom.js"></script> <!-- Corrected Path -->
+   </body>
+   <script>
+      function toggleContent() {
             const content = document.querySelector('.content');
             const readMoreLink = document.querySelector('.read_more');
         
@@ -232,7 +235,5 @@
                 readMoreLink.textContent = 'Read More'; // Update link text
             }
         }        
-      </script>
-
-   </body>
+   </script>
 </html>
