--- a/UI/index.html
+++ b/UI/index.html
@@ -12,17 +12,17 @@
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="Yves Byiringiro" content="">
-      <link rel="icon" href="assets/images/tablogo.png" type="image/png"/>
+      <link rel="icon" href="/assets/images/tablogo.png" type="image/png"/> <!-- Corrected Path -->
       <!-- bootstrap css -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link rel="stylesheet" href="/css/bootstrap.min.css"> <!-- Corrected Path -->
       <!-- style css -->
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="/css/style.css"> <!-- Corrected Path -->
       <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="/css/responsive.css"> <!-- Corrected Path -->
       <!-- fevicon -->
-      <link rel="icon" href="assets/images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="/assets/images/fevicon.png" type="image/gif" /> <!-- Corrected Path -->
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="/css/jquery.mCustomScrollbar.min.css"> <!-- Corrected Path -->
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
@@ -36,7 +36,7 @@
    <body class="main-layout">
       <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="assets/images/loading.gif" alt="#"/></div>
+         <div class="loader"><img src="/assets/images/loading.gif" alt="#"/></div> <!-- Corrected Path -->
       </div>
       <!-- end loader -->
       <!-- header -->
@@ -49,7 +49,9 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="assets/images/logo.png" alt="#" /></a>
+                              <a href="/">
+                                 <img src="/assets/images/logo.png" alt="GOGO Homes & Apartment Logo" /> <!-- Corrected Path -->
+                              </a>
                            </div>
                         </div>
                      </div>
@@ -62,25 +64,25 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item active">
-                                 <a class="nav-link" href="index.html">Home</a>
+                                 <a class="nav-link" href="/">Home</a> <!-- Changed to root path -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="html/about.html">About</a>
+                                 <a class="nav-link" href="/about">About</a> <!-- Changed to clean URL -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="html/apartments.html">Our Apartments</a>
+                                 <a class="nav-link" href="/apartments">Our Apartments</a> <!-- Changed to clean URL -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="html/gallery.html">Gallery</a>
+                                 <a class="nav-link" href="/gallery">Gallery</a> <!-- Changed to clean URL -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="html/testimonial.html">testimonial</a>
+                                 <a class="nav-link" href="/testimonial">testimonial</a> <!-- Changed to clean URL -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="html/contact.html">Contact Us</a>
+                                 <a class="nav-link" href="/contact">Contact Us</a> <!-- Changed to clean URL -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="html/admin.html">Admin</a>
+                                 <a class="nav-link" href="/admin">Admin</a> <!-- Changed to clean URL -->
                               </li>
                            </ul>
                         </div>
@@ -102,15 +104,15 @@
             </ol>
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img class="first-slide" src="assets/images/ban8.jpg" alt="First slide">
+                  <img class="first-slide" src="/assets/images/ban8.jpg" alt="First slide"> <!-- Corrected Path -->
                   <div class="container">
                   </div>
                </div>
                <div class="carousel-item">
-                  <img class="second-slide" src="assets/images/ban4.jpg" alt="Second slide">
+                  <img class="second-slide" src="/assets/images/ban4.jpg" alt="Second slide"> <!-- Corrected Path -->
                </div>
                <div class="carousel-item">
-                  <img class="third-slide" src="assets/images/ban10.jpg" alt="Third slide">
+                  <img class="third-slide" src="/assets/images/ban10.jpg" alt="Third slide"> <!-- Corrected Path -->
                </div>
             </div>
             <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
@@ -132,12 +134,12 @@
                            <div class="row">
                               <div class="col-md-12">
                                  <span>Arrival</span>
-                                 <img class="date_cua" src="assets/images/date.png">
+                                 <img class="date_cua" src="/assets/images/date.png"> <!-- Corrected Path -->
                                  <input id="arrivalDate" class="online_book" placeholder="dd/mm/yyyy" type="date" required>
                               </div>
                               <div class="col-md-12">
                                  <span>Departure</span>
-                                 <img class="date_cua" src="assets/images/date.png">
+                                 <img class="date_cua" src="/assets/images/date.png"> <!-- Corrected Path -->
                                  <input id="departureDate" class="online_book" placeholder="dd/mm/yyyy" type="date" required>
                               </div>
                               <div class="col-md-12">
@@ -164,107 +166,107 @@
             </div>
             <div class="row">
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/2.webp" data-lightbox="gallery" data-title="Image 1">
+                   <a href="/assets/images/2.webp" data-lightbox="gallery" data-title="Image 1"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/2.webp" alt="#"/>
+                           <img src="/assets/images/2.webp" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/6.webp" data-lightbox="gallery" data-title="Image 2">
+                   <a href="/assets/images/6.webp" data-lightbox="gallery" data-title="Image 2"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/6.webp" alt="#"/>
+                           <img src="/assets/images/6.webp" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/32.jpg" data-lightbox="gallery" data-title="Image 3">
+                   <a href="/assets/images/32.jpg" data-lightbox="gallery" data-title="Image 3"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/32.jpg" alt="#"/>
+                           <img src="/assets/images/32.jpg" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/3.webp" data-lightbox="gallery" data-title="Image 4">
+                   <a href="/assets/images/3.webp" data-lightbox="gallery" data-title="Image 4"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/3.webp" alt="#"/>
+                           <img src="/assets/images/3.webp" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/4.webp" data-lightbox="gallery" data-title="Image 5">
+                   <a href="/assets/images/4.webp" data-lightbox="gallery" data-title="Image 5"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/4.webp" alt="#"/>
+                           <img src="/assets/images/4.webp" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/13.webp" data-lightbox="gallery" data-title="Image 6">
+                   <a href="/assets/images/13.webp" data-lightbox="gallery" data-title="Image 6"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/13.webp" alt="#"/>
+                           <img src="/assets/images/13.webp" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/31.webp" data-lightbox="gallery" data-title="Image 7">
+                   <a href="/assets/images/31.webp" data-lightbox="gallery" data-title="Image 7"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/31.webp" alt="#"/>
+                           <img src="/assets/images/31.webp" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/25.jpg" data-lightbox="gallery" data-title="Image 8">
+                   <a href="/assets/images/25.jpg" data-lightbox="gallery" data-title="Image 8"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/25.jpg" alt="#"/>
+                           <img src="/assets/images/25.jpg" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/12.webp" data-lightbox="gallery" data-title="Image 9">
+                   <a href="/assets/images/12.webp" data-lightbox="gallery" data-title="Image 9"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/12.webp" alt="#"/>
+                           <img src="/assets/images/12.webp" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/9.webp" data-lightbox="gallery" data-title="Image 10">
+                   <a href="/assets/images/9.webp" data-lightbox="gallery" data-title="Image 10"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/9.webp" alt="#"/>
+                           <img src="/assets/images/9.webp" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/10.webp" data-lightbox="gallery" data-title="Image 11">
+                   <a href="/assets/images/10.webp" data-lightbox="gallery" data-title="Image 11"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/10.webp" alt="#"/>
+                           <img src="/assets/images/10.webp" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/5.webp" data-lightbox="gallery" data-title="Image 12">
+                   <a href="/assets/images/5.webp" data-lightbox="gallery" data-title="Image 12"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/5.webp" alt="#"/>
+                           <img src="/assets/images/5.webp" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/26.jpg" data-lightbox="gallery" data-title="Image 13">
+                   <a href="/assets/images/26.jpg" data-lightbox="gallery" data-title="Image 13"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/26.jpg" alt="#"/>
+                           <img src="/assets/images/26.jpg" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/1.webp" data-lightbox="gallery" data-title="Image 14">
+                   <a href="/assets/images/1.webp" data-lightbox="gallery" data-title="Image 14"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/1.webp" alt="#"/>
+                           <img src="/assets/images/1.webp" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
                <div class="col-md-4 col-sm-6 gallery-item">
-                   <a href="assets/images/20.jpg" data-lightbox="gallery" data-title="Image 15">
+                   <a href="/assets/images/20.jpg" data-lightbox="gallery" data-title="Image 15"> <!-- Corrected Path -->
                        <figure>
-                           <img src="assets/images/20.jpg" alt="#"/>
+                           <img src="/assets/images/20.jpg" alt="#"/> <!-- Corrected Path -->
                        </figure>
                    </a>
                </div>
@@ -332,12 +334,12 @@
                   <div class="col-md-4">
                      <h3>Menu Link</h3>
                      <ul class="link_menu">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="html/about.html"> about</a></li>
-                        <li><a href="html/apartments.html">Our Apartments</a></li>
-                        <li><a href="html/gallery.html">Gallery</a></li>
-                        <li><a href="html/testimonial.html">testimonial</a></li>
-                        <li><a href="html/contact.html">Contact Us</a></li>
+                        <li class="active"><a href="/">Home</a></li> <!-- Corrected link -->
+                        <li><a href="/about">About</a></li> <!-- Corrected link -->
+                        <li><a href="/apartments">Our Apartments</a></li> <!-- Corrected link -->
+                        <li><a href="/gallery">Gallery</a></li> <!-- Corrected link -->
+                        <li><a href="/testimonial">testimonial</a></li> <!-- Corrected link -->
+                        <li><a href="/contact">Contact Us</a></li> <!-- Corrected link -->
                      </ul>
                   </div>
                   <div class="col-md-4">
@@ -367,13 +369,13 @@
       </footer>
       <!-- end footer -->
       <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
+      <script src="/js/jquery.min.js"></script> <!-- Corrected Path -->
+      <script src="/js/bootstrap.bundle.min.js"></script> <!-- Corrected Path -->
+      <script src="/js/jquery-3.0.0.min.js"></script> <!-- Corrected Path -->
       <!-- sidebar -->
-      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>
-      <script src="js/flatpkr.js"></script>
+      <script src="/js/jquery.mCustomScrollbar.concat.min.js"></script> <!-- Corrected Path -->
+      <script src="/js/custom.js"></script> <!-- Corrected Path -->
+      <script src="/js/flatpkr.js"></script> <!-- Corrected Path -->
    </body>
    <script>
       document.getElementById('searchForm').addEventListener('submit', (event) => {
@@ -388,7 +390,7 @@
          }
       
          // Redirect to apartments.html with query parameters
-         const url = `html/apartments.html?arrival_date=${encodeURIComponent(arrivalDate)}&departure_date=${encodeURIComponent(departureDate)}`;
+         const url = `/apartments?arrival_date=${encodeURIComponent(arrivalDate)}&departure_date=${encodeURIComponent(departureDate)}`; // Changed to clean URL
          window.location.href = url;
       });      
    </script>
