--- a/UI/html/booking.html
+++ b/UI/html/booking.html
@@ -12,18 +12,18 @@
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="Yves Byiringiro" content="">
-      <link rel="icon" href="../assets/images/tablogo.png" type="image/png"/>
+      <link rel="icon" href="/assets/images/tablogo.png" type="image/png"/> <!-- Corrected Path -->
       <!-- bootstrap css -->
-      <link rel="stylesheet" href="../css/bootstrap.min.css">
+      <link rel="stylesheet" href="/css/bootstrap.min.css"> <!-- Corrected Path -->
       <!-- style css -->
-      <link rel="stylesheet" href="../css/style.css">
-      <link rel="stylesheet" href="../css/reserve.css">
+      <link rel="stylesheet" href="/css/style.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="/css/reserve.css"> <!-- Corrected Path -->
       <!-- Responsive-->
-      <link rel="stylesheet" href="../css/responsive.css">
+      <link rel="stylesheet" href="/css/responsive.css"> <!-- Corrected Path -->
       <!-- fevicon -->
-      <link rel="icon" href="../assets/images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="/assets/images/fevicon.png" type="image/gif" /> <!-- Corrected Path -->
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="../css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="/css/jquery.mCustomScrollbar.min.css"> <!-- Corrected Path -->
        <!-- External Libraries -->
       <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
@@ -41,14 +41,14 @@
          <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->   
-      <link rel="stylesheet" href="../css/admic-nav-bar.css">
+      <link rel="stylesheet" href="/css/admic-nav-bar.css"> <!-- Corrected Path -->
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
    </head>
    <!-- body -->
    <body class="main-layout">
       <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="../assets/images/loading.gif" alt="#"/></div>
+         <div class="loader"><img src="/assets/images/loading.gif" alt="#"/></div> <!-- Corrected Path -->
       </div>
       <!-- end loader -->
       <!-- header -->
@@ -61,7 +61,9 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="../html/admin-dashboard.html"><img src="../assets/images/logo.png" alt="#" /></a>
+                              <a href="/admin-dashboard">
+                                 <img src="/assets/images/logo.png" alt="#" /> <!-- Corrected Path -->
+                              </a>
                            </div>
                         </div>
                      </div>
@@ -74,32 +76,32 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item">
-                                  <a class="nav-link" href="admin-dashboard.html">
+                                  <a class="nav-link" href="/admin-dashboard">
                                       <i class="fas fa-home"></i> Home
                                   </a>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link" href="people.html">
+                                  <a class="nav-link" href="/people">
                                       <i class="fas fa-bullhorn"></i> Advertise
                                   </a>
                               </li>
                               <li class="nav-item active">
-                                  <a class="nav-link" href="booking.html">
+                                  <a class="nav-link" href="/booking">
                                       <i class="fas fa-calendar-alt"></i> Booking
                                   </a>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link" href="testimonial-admin.html">
+                                  <a class="nav-link" href="/testimonial-admin">
                                       <i class="fas fa-comment-alt"></i> Testimonial
                                   </a>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link" href="co-admins.html">
+                                  <a class="nav-link" href="/co-admins">
                                       <i class="fas fa-users"></i> Accounts Manager
                                   </a>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link" href="modify-Apartment.html">
+                                  <a class="nav-link" href="/modify-Apartment">
                                       <i class="fas fa-edit"></i> Modify Properties
                                   </a>
                               </li>
