--- a/UI/html/contact.html
+++ b/UI/html/contact.html
@@ -1,45 +1,28 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
    <head>
-      <!-- basic -->
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <!-- mobile metas -->
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-      <!-- site metas -->
       <title>GOGO Home & Apartment</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="Yves Byiringiro" content="">
-      <link rel="icon" href="../assets/images/tablogo.png" type="image/png"/>
-      <!-- bootstrap css -->
-      <link rel="stylesheet" href="../css/bootstrap.min.css">
-      <!-- style css -->
-      <link rel="stylesheet" href="../css/style.css">
-      <!-- Responsive-->
-      <link rel="stylesheet" href="../css/responsive.css">
-      <!-- fevicon -->
-      <link rel="icon" href="../assets/images/fevicon.png" type="image/gif" />
-      <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="../css/jquery.mCustomScrollbar.min.css">
-      <!-- Tweaks for older IEs-->
+      <link rel="icon" href="/assets/images/tablogo.png" type="image/png"/> <!-- Corrected Path -->
+      <link rel="stylesheet" href="/css/bootstrap.min.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="/css/style.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="/css/responsive.css"> <!-- Corrected Path -->
+      <link rel="icon" href="/assets/images/fevicon.png" type="image/gif" /> <!-- Corrected Path -->
+      <link rel="stylesheet" href="/css/jquery.mCustomScrollbar.min.css"> <!-- Corrected Path -->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
-      <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-   </head>
-   <!-- body -->
+      </head>
    <body class="main-layout">
-      <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="../assets/images/loading.gif" alt="#"/></div>
+         <div class="loader"><img src="/assets/images/loading.gif" alt="#"/></div> <!-- Corrected Path -->
       </div>
-      <!-- end loader -->
-      <!-- header -->
       <header>
-         <!-- header inner -->
          <div class="header">
             <div class="container">
                <div class="row">
@@ -47,7 +30,9 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="../index.html"><img src="../assets/images/logo.png" alt="#" /></a>
+                              <a href="/">
+                                 <img src="/assets/images/logo.png" alt="#" /> <!-- Corrected Path -->
+                              </a>
                            </div>
                         </div>
                      </div>
@@ -60,22 +45,22 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item ">
-                                 <a class="nav-link" href="../index.html">Home</a>
+                                 <a class="nav-link" href="/">Home</a> <!-- Corrected Link -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="about.html">About</a>
+                                 <a class="nav-link" href="/about">About</a> <!-- Corrected Link -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="apartments.html">Our Apartments</a>
+                                 <a class="nav-link" href="/apartments">Our Apartments</a> <!-- Corrected Link -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="gallery.html">Gallery</a>
+                                 <a class="nav-link" href="/gallery">Gallery</a> <!-- Corrected Link -->
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="testimonial.html">testimonial</a>
+                                 <a class="nav-link" href="/testimonial">testimonial</a> <!-- Corrected Link -->
                               </li>
                               <li class="nav-item active">
-                                 <a class="nav-link" href="contact.html">Contact Us</a>
+                                 <a class="nav-link" href="/contact">Contact Us</a> <!-- Corrected Link -->
                               </li>
                            </ul>
                         </div>
@@ -85,9 +70,7 @@
             </div>
          </div>
       </header>
-      <!-- end header inner -->
-      <!-- end header -->
-     <div class="back_re">
+      <div class="back_re">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -98,7 +81,6 @@
             </div>
          </div>
       </div>
-      <!--  contact -->
       <div class="contact">
          <div class="container">
             <div class="row">
@@ -136,8 +118,6 @@
             </div>
          </div>
       </div>
-      <!-- end contact -->
-      <!--  footer -->
       <footer>
          <div class="footer">
             <div class="container">
@@ -153,12 +133,12 @@
                   <div class="col-md-4">
                      <h3>Menu Link</h3>
                      <ul class="link_menu">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="html/about.html"> about</a></li>
-                        <li><a href="html/apartments.html">Our Apartments</a></li>
-                        <li><a href="html/gallery.html">Gallery</a></li>
-                        <li><a href="html/testimonial.html">testimonial</a></li>
-                        <li><a href="html/contact.html">Contact Us</a></li>
+                        <li class="active"><a href="/">Home</a></li> <!-- Corrected link -->
+                        <li><a href="/about">About</a></li> <!-- Corrected link -->
+                        <li><a href="/apartments">Our Apartments</a></li> <!-- Corrected link -->
+                        <li><a href="/gallery">Gallery</a></li> <!-- Corrected link -->
+                        <li><a href="/testimonial">testimonial</a></li> <!-- Corrected link -->
+                        <li><a class="nav-link" href="/contact">Contact Us</a></li> <!-- Corrected link -->
                      </ul>
                   </div>
                   <div class="col-md-4">
@@ -186,16 +166,14 @@
             </div>
          </div>
       </footer>
-      <!-- end footer -->
-      <!-- Javascript files-->
-      <script src="../js/jquery.min.js"></script>
-      <script src="../js/bootstrap.bundle.min.js"></script>
-      <script src="../js/jquery-3.0.0.min.js"></script>
-      <!-- sidebar -->
-      <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="../js/custom.js"></script>
+      <script src="/js/jquery.min.js"></script> <!-- Corrected Path -->
+      <script src="/js/bootstrap.bundle.min.js"></script> <!-- Corrected Path -->
+      <script src="/js/jquery-3.0.0.min.js"></script> <!-- Corrected Path -->
+      <script src="/js/jquery.mCustomScrollbar.concat.min.js"></script> <!-- Corrected Path -->
+      <script src="/js/custom.js"></script> <!-- Corrected Path -->
       <script>
-         const API_BASE_URL = "https://backend-service-432219336422.us-central1.run.app/api"; // Use the local backend URL
+         const API_BASE_URL = "https://backend-service-432219336422.us-central1.run.app/api"; // Production Backend
+         const LOCAL_API_BASE_URL = "http://localhost:8080/api"; // Development Backend
 
          document.getElementById('request').addEventListener('submit', async function (event) {
             event.preventDefault();
@@ -214,8 +192,15 @@
               return;
             }
 
+            // Determine which API URL to use
+            const currentHostname = window.location.hostname;
+            let baseUrl = API_BASE_URL; // Default to production
+            if (currentHostname === 'localhost' || currentHostname === '127.0.0.1') {
+                baseUrl = LOCAL_API_BASE_URL;
+            }
+
             try {
-              const response = await fetch(`${API_BASE_URL}/contact`, {
+              const response = await fetch(`${baseUrl}/contact`, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ name, email, phoneNumber, message }),
